# repo-tui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-safe.sh  run.sh  test.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml  sonarcloud.yml
src/repo_tui/: __init__.py  app.py  config.py  data.py  launcher.py  models.py
src/repo_tui/widgets/: __init__.py  issue_list.py  repo_grid.py  repo_list.py
tests/: __init__.py  test_app.py  test_app_integration.py
